# smallpond

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: file_io_benchmark.py  gray_sort_benchmark.py  hash_partition_benchmark.py  urls_sort_benchmark.py
docs/source/: api.rst  conf.py  getstarted.rst  index.rst  internals.rst
docs/source/api/: dataframe.rst  dataset.rst  execution.rst  nodes.rst  tasks.rst
examples/: fstest.py  s3_reader.py  shuffle_data.py  shuffle_mock_urls.py  sort_mock_urls.py  sort_mock_urls_v2.py
smallpond/: __init__.py  common.py  dataframe.py  session.py  utility.py  worker.py
smallpond/contrib/: copy_table.py  log_dataset.py  warc.py
smallpond/execution/: driver.py  executor.py  manager.py  scheduler.py  task.py  workqueue.py
smallpond/io/: arrow.py  filesystem.py
smallpond/logical/: dataset.py  node.py  optimizer.py  planner.py  udf.py
smallpond/platform/: __init__.py  base.py  mpi.py
tests/: conftest.py  datagen.py  test_arrow.py  test_bench.py  test_common.py  test_dataframe.py  test_dataset.py  test_deltalake.py  test_driver.py  test_execution.py  test_fabric.py  test_filesystem.py  test_logical.py  test_partition.py  test_plan.py  test_scheduler.py  test_session.py  test_utility.py  test_workqueue.py
